1 채팅기능 준비하기 1

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,4 +11,9 @@ html(lan="en")
             h1 SOOM
         main 
             h2 SOOM에 오신 것을 환영합니다.
+            ul
+            form
+                input(type="text", placeholder="내용을 적으세요", required)
+                button 보내기
+            
         script(src="/public/js/app.js")
