8 닉네임 추가하기

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -18,7 +18,10 @@ html(lan="en")
             div#room 
                 h3
                 ul 
-                form
+                form#name
+                    input(type="text", placeholder="닉네임", required)
+                    button 저장
+                form#msg
                     input(type="text", placeholder="메시지", required)
                     button 보내기
         script(src="/socket.io/socket.io.js")
