11 채팅룸 관리하기

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -15,6 +15,8 @@ html(lan="en")
                 form
                     input(type="text", placeholder="방이름", required)
                     button 채팅룸 입장
+                h4 채팅룸 목록: 
+                    ul
             div#room 
                 h3
                 ul 
