13 2 스트림 객체 확인하기

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,6 +11,7 @@ html(lan="en")
             h1 SOOM
         main 
             h2 SOOM에 오신 것을 환영합니다.
+            video#myFace(autoplay, playsinline, width="400", height="400")
             
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
