--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -15,6 +15,6 @@ html(lan="en")
                 video#myFace(autoplay, playsinline, width="400", height="400")
                 button#mute 음소거
                 button#camera 카메라 끄기
-            
+                select#cameras            
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
