--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,10 +11,15 @@ html(lan="en")
             h1 SOOM
         main 
             h2 SOOM에 오신 것을 환영합니다.
-            div#myStream
-                video#myFace(autoplay, playsinline, width="400", height="400")
-                button#mute 음소거
-                button#camera 카메라 끄기
-                select#cameras            
+            div#welcome
+                form 
+                    input(type="text", placeholder="방이름", required)
+                    button 입장
+            div#call
+                div#myStream
+                    video#myFace(autoplay, playsinline, width="400", height="400")
+                    button#mute 음소거
+                    button#camera 카메라 끄기
+                    select#cameras            
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
